--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.1.5",
         "@vueuse/motion": "^2.2.5",
         "gsap": "^3.12.5",
         "heroicons": "^2.1.5",
